--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -8,36 +8,51 @@
   </parent>
   <artifactId>colplus-ws</artifactId>
   <name>CoL backend services (WS)</name>
-  <url>http://github.org/sp2000/${project.artifactId}</url>
+
+    <properties>
+        <mainClass>org.col.ColApp</mainClass>
+    </properties>
+
   <dependencies>
+      <!-- Dropwizard -->
+      <dependency>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-core</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+      </dependency>
     <dependency>
       <groupId>org.col</groupId>
       <artifactId>colplus-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.col</groupId>
       <artifactId>colplus-common</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.col</groupId>
       <artifactId>colplus-dao</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.col</groupId>
-      <artifactId>colplus-cli</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
   <build>
     <defaultGoal>compile exec:java</defaultGoal>
     <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <configuration>
+                <mainClass>${mainClass}</mainClass>
+                <arguments>
+                    <argument>server</argument>
+                    <argument>config.yml</argument>
+                </arguments>
+            </configuration>
+        </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
-        <!-- version>2.4.1</version -->
         <configuration>
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <transformers>
