--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
   <packaging>pom</packaging>
 
   <name>CoL backend services</name>
-  <url>http://github.org/sp2000/${project.artifactId}</url>
+  <url>http://github.org/Sp2000/${project.artifactId}</url>
 
   <scm>
-    <connection>scm:git:git@github.com:sp2000/motherpom.git</connection>
-    <url>https://github.com/sp2000/motherpom</url>
-    <developerConnection>scm:git:git@github.com:sp2000/motherpom.git</developerConnection>
+    <connection>scm:git:git@github.com:Sp2000/colplus-backend.git</connection>
+    <url>https://github.com/Sp2000/colplus-backend</url>
+    <developerConnection>scm:git:git@github.com:Sp2000/colplus-backend.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -29,23 +29,23 @@
     <jdkLevel>1.8</jdkLevel>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <mainClass>org.col.ColApp</mainClass>
 
-    <!-- release settings -->
-    <release.tagNameBase>${project.artifactId}</release.tagNameBase>
-    <github.global.server>github</github.global.server>
-
-    <!-- Library dependencies Check for available updates: mvn versions:display-dependency-updates -->
+    <!-- Library dependencies
+        Check for available updates: mvn versions:display-dependency-updates
+    -->
     <commmons-lang.version>3.5</commmons-lang.version>
     <dropwizard.version>1.1.4</dropwizard.version>
     <dwc-api.version>1.17</dwc-api.version>
     <dwca-io.version>1.31</dwca-io.version>
     <fastutil.version>8.1.0</fastutil.version>
     <gbif-parser.version>0.31</gbif-parser.version>
+    <gbif-common.version>0.36</gbif-common.version>
     <guava.version>21.0</guava.version>
     <hikaricp.version>2.7.1</hikaricp.version>
     <!-- make sure jackson matches dropwizards jackson version -->
     <jackson2.version>2.8.10</jackson2.version>
+    <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
+    <jsr305.version>3.0.2</jsr305.version>
     <junit.version>4.12</junit.version>
     <kryo.version>4.0.1</kryo.version>
     <mapdb.version>3.0.5</mapdb.version>
@@ -55,12 +55,16 @@
     <postgresql.version>42.1.1</postgresql.version>
     <postgresql-embedded>2.4</postgresql-embedded>
     <slf4j.version>1.7.24</slf4j.version>
+    <validation-api.version>2.0.0.Final</validation-api.version>
 
-    <!-- Maven plugin versions. Check for available updates: mvn versions:display-plugin-updates -->
+
+      <!-- Maven plugin versions.
+          Check for available updates: mvn versions:display-plugin-updates
+      -->
+    <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.0.1</maven-dependency-plugin.version>
-    <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
@@ -101,9 +105,10 @@
     <module>colplus-api</module>
     <module>colplus-common</module>
     <module>colplus-cli</module>
-    <module>colplus-ws</module>
     <module>colplus-dao</module>
     <module>colplus-dwca</module>
+    <module>colplus-parser</module>
+    <module>colplus-ws</module>
   </modules>
 
   <distributionManagement>
@@ -119,13 +124,210 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-bom</artifactId>
-        <version>${dropwizard.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+	    <!-- Colplus -->
+	    <dependency>
+	      <groupId>org.col</groupId>
+	      <artifactId>colplus-api</artifactId>
+          <version>${project.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.col</groupId>
+	      <artifactId>colplus-common</artifactId>
+          <version>${project.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.col</groupId>
+	      <artifactId>colplus-dao</artifactId>
+          <version>${project.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.col</groupId>
+	      <artifactId>colplus-dwca</artifactId>
+          <version>${project.version}</version>
+	    </dependency>
+
+        <!-- javax -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>${javax.ws.rs-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>${jsr305.version}</version>
+        </dependency>
+
+	    <!-- Dropwizard Bill of materials. Imports all versions just like Dropwizard uses -->
+	    <dependency>
+	      <groupId>io.dropwizard</groupId>
+	      <artifactId>dropwizard-core</artifactId>
+          <version>${dropwizard.version}</version>
+	    </dependency>
+        <dependency>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-bom</artifactId>
+          <version>${dropwizard.version}</version>
+          <type>pom</type>
+          <scope>import</scope>
+        </dependency>
+
+	    <!-- GBIF -->
+	    <dependency>
+	      <groupId>org.gbif</groupId>
+	      <artifactId>dwc-api</artifactId>
+	      <version>${dwc-api.version}</version>
+	    </dependency>
+        <dependency>
+            <groupId>org.gbif</groupId>
+            <artifactId>gbif-common</artifactId>
+            <version>${gbif-common.version}</version>
+        </dependency>
+	    <dependency>
+	      <groupId>org.gbif</groupId>
+	      <artifactId>name-parser</artifactId>
+	      <version>${name-parser.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.gbif</groupId>
+	      <artifactId>gbif-parsers</artifactId>
+	      <version>${gbif-parser.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.gbif</groupId>
+	      <artifactId>dwca-io</artifactId>
+	      <version>${dwca-io.version}</version>
+	      <exclusions>
+	        <exclusion>
+	          <!-- digester via cglib brings in an old asm version, conflicting with kryo -->
+	          <artifactId>asm</artifactId>
+	          <groupId>asm</groupId>
+	        </exclusion>
+	      </exclusions>
+	    </dependency>
+
+	    <!-- mybatis / DB -->
+	    <dependency>
+	      <groupId>org.postgresql</groupId>
+	      <artifactId>postgresql</artifactId>
+	      <version>${postgresql.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.zaxxer</groupId>
+	      <artifactId>HikariCP</artifactId>
+	      <version>${hikaricp.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.mybatis</groupId>
+	      <artifactId>mybatis</artifactId>
+	      <version>${mybatis.version}</version>
+	    </dependency>
+
+	    <!-- neo4j, mapdb & kryo -->
+	    <dependency>
+	      <groupId>org.mapdb</groupId>
+	      <artifactId>mapdb</artifactId>
+	      <version>${mapdb.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.neo4j</groupId>
+	      <artifactId>neo4j</artifactId>
+	      <version>${neo4j.version}</version>
+	      <exclusions>
+	        <exclusion>
+	          <!-- turn off usage reporting to neo -->
+	          <groupId>org.neo4j</groupId>
+	          <artifactId>neo4j-udc</artifactId>
+	        </exclusion>
+	      </exclusions>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.neo4j</groupId>
+	      <artifactId>neo4j-kernel</artifactId>
+	      <version>${neo4j.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.neo4j</groupId>
+	      <artifactId>neo4j-cypher</artifactId>
+	      <version>${neo4j.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.neo4j</groupId>
+	      <artifactId>neo4j-shell</artifactId>
+	      <version>${neo4j.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.neo4j</groupId>
+	      <artifactId>neo4j-slf4j</artifactId>
+	      <version>${neo4j.version}</version>
+	    </dependency>
+	    <!-- we use kryo to serialize data into binary which is > 10 times faster than jackson even with 
+	      smile -->
+	    <dependency>
+	      <groupId>com.esotericsoftware</groupId>
+	      <artifactId>kryo</artifactId>
+	      <version>${kryo.version}</version>
+	    </dependency>
+
+	    <!-- logging -->
+	    <dependency>
+	      <groupId>org.slf4j</groupId>
+	      <artifactId>slf4j-api</artifactId>
+	      <version>${slf4j.version}</version>
+	    </dependency>
+
+	    <!-- JACKSON2 -->
+	    <dependency>
+	      <groupId>com.fasterxml.jackson.core</groupId>
+	      <artifactId>jackson-databind</artifactId>
+	      <version>${jackson2.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.fasterxml.jackson.core</groupId>
+	      <artifactId>jackson-annotations</artifactId>
+	      <version>${jackson2.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.fasterxml.jackson.dataformat</groupId>
+	      <artifactId>jackson-dataformat-yaml</artifactId>
+	      <version>${jackson2.version}</version>
+	    </dependency>
+
+	    <!-- other -->
+	    <dependency>
+	      <groupId>org.apache.commons</groupId>
+	      <artifactId>commons-lang3</artifactId>
+	      <version>${commmons-lang.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.google.guava</groupId>
+	      <artifactId>guava</artifactId>
+	      <version>${guava.version}</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>it.unimi.dsi</groupId>
+	      <artifactId>fastutil</artifactId>
+	      <version>${fastutil.version}</version>
+	    </dependency>
+
+	    <!-- TEST SCOPE -->
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>${junit.version}</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>ru.yandex.qatools.embed</groupId>
+	      <artifactId>postgresql-embedded</artifactId>
+	      <version>${postgresql-embedded}</version>
+	      <scope>test</scope>
+	    </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -146,20 +348,12 @@
             <target>${jdkLevel}</target>
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
-            <excludes>
-              <exclude>**/tasks/old/**/*.java</exclude>
-            </excludes>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>${maven-dependency-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>${maven-deploy-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -304,9 +498,14 @@
             <resume>false</resume>
             <useReleaseProfile>true</useReleaseProfile>
             <releaseProfiles>col-release</releaseProfiles>
-            <tagNameFormat>${release.tagNameBase}-@{project.version}</tagNameFormat>
+            <tagNameFormat>${project.artifactId}-@{project.version}</tagNameFormat>
           </configuration>
         </plugin>
+          <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>exec-maven-plugin</artifactId>
+              <version>${exec-maven-plugin.version}</version>
+          </plugin>
       </plugins>
     </pluginManagement>
 
@@ -317,27 +516,19 @@
       </plugin>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <mainClass>${mainClass}</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
+        <version>${maven-jar-plugin.version}</version>
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${jdkLevel}</source>
+          <target>${jdkLevel}</target>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.4</version>
+        <version>${maven-source-plugin.version}</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -347,26 +538,16 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <configuration>
-          <mainClass>${mainClass}</mainClass>
-          <arguments>
-            <argument>server</argument>
-            <argument>config.yml</argument>
-          </arguments>
-        </configuration>
-      </plugin>
       <!-- run integration tests (*IT) during verify -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
       </plugin>
     </plugins>
   </build>
@@ -419,17 +600,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-
-    <!-- local test settings -->
-    <profile>
-      <id>col-local</id>
-      <properties>
-        <db.host>localhost</db.host>
-        <db.database>colplus</db.database>
-        <db.user>postgres</db.user>
-        <db.password></db.password>
-      </properties>
     </profile>
   </profiles>
 
